add about section

--- a/index2.html
+++ b/index2.html
@@ -1,92 +1,14 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us Section</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-    body { font-family: 'Inter', sans-serif; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>من نحن - Qleen</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
 </head>
-<body class="bg-[#fdfaf5]">
-
-<section class="py-16 px-4 md:px-8 lg:px-16">
-  <div class="max-w-7xl mx-auto flex flex-col lg:flex-row items-center gap-12">
-
-    <!-- Left Content -->
-    <div class="flex-1 flex flex-col gap-6">
-      <p class="text-orange-500 font-semibold text-sm">About us</p>
-      <h2 class="text-3xl sm:text-4xl font-bold text-gray-900">Honest. Simple. Qleen.</h2>
-      <p class="text-gray-800 text-lg">Your satisfaction is our priority.</p>
-
-      <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 mt-6">
-        <!-- Item 1 -->
-        <div class="flex gap-3 items-start">
-          <div class="flex-shrink-0 mt-1">
-            <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7" />
-            </svg>
-          </div>
-          <div>
-            <h4 class="font-semibold text-gray-900">Trust</h4>
-            <p class="text-gray-600 text-sm">Trust is our paramount value. All of our employees go through work authorization check.</p>
-          </div>
-        </div>
-
-        <!-- Item 2 -->
-        <div class="flex gap-3 items-start">
-          <div class="flex-shrink-0 mt-1">
-            <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7" />
-            </svg>
-          </div>
-          <div>
-            <h4 class="font-semibold text-gray-900">Quality</h4>
-            <p class="text-gray-600 text-sm">Excellent performance, flat rates, no surprises. Five star rating on Google.</p>
-          </div>
-        </div>
-
-        <!-- Item 3 -->
-        <div class="flex gap-3 items-start">
-          <div class="flex-shrink-0 mt-1">
-            <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7" />
-            </svg>
-          </div>
-          <div>
-            <h4 class="font-semibold text-gray-900">Care</h4>
-            <p class="text-gray-600 text-sm">Average response time is less than 10 minutes. You can call, e-mail, text or message us.</p>
-          </div>
-        </div>
-
-        <!-- Item 4 -->
-        <div class="flex gap-3 items-start">
-          <div class="flex-shrink-0 mt-1">
-            <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7" />
-            </svg>
-          </div>
-          <div>
-            <h4 class="font-semibold text-gray-900">People</h4>
-            <p class="text-gray-600 text-sm">We pay good wages, health benefits and retirement, and abide by the laws.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Right Card -->
-    <div class="flex-1 bg-white rounded-2xl shadow-lg p-8 flex flex-col items-center justify-center">
-      <span class="text-4xl font-bold text-green-600">96%</span>
-      <p class="text-gray-900 font-semibold mt-2">Satisfaction Rate*</p>
-      <p class="text-gray-500 text-sm mt-1">*Based on 356 reviews on Google</p>
-      <img src="https://images.unsplash.com/photo-1600488990822-1de0a7a2eb07?w=300" 
-           alt="Cleaning Glove" class="mt-4 w-32 h-32 object-contain">
-    </div>
-
-  </div>
-</section>
-
+<body class="bg-gray-50">
+ 
 </body>
 </html>
