--- a/index2.html
+++ b/index2.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>من نحن - Qleen</title>
+    <title>خدماتنا - Qleen</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
+   
 </head>
 <body class="bg-gray-50">
- 
+
 </body>
 </html>
