--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
 
             <!-- Phone & CTA -->
             <div class="hidden md:flex items-center space-x-4 ">
-                <a href="tel:8442429484" class="flex items-center text-gray-700 hover:text-[#154461] transition-colors">
+                <a href="#" class="flex items-center text-gray-700 hover:text-[#154461] transition-colors">
                     <div class="w-10 h-10 bg-[#154461] rounded-full flex items-center justify-center ml-2">
                         <svg class="w-5 h-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -894,7 +894,7 @@
                 <a href="#" class="text-gray-700 hover:text-[#154461] text-lg font-medium">الخدمات</a>
                 <a href="#" class="text-gray-700 hover:text-[#154461] text-lg font-medium">الصفحات</a>
                 <a href="#" class="text-gray-700 hover:text-[#154461] text-lg font-medium">العناصر</a>
-                <a href="tel:8442429484"
+                <a href="#"
                     class="flex items-center text-gray-700 hover:text-[#154461] text-lg font-medium mt-4 flex-row-reverse">
                     <div class="w-10 h-10 bg-[#FF6B35] rounded-full flex items-center justify-center ml-3">
                         <svg class="w-5 h-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -1019,7 +1019,7 @@
                                     <p class="text-gray-600 text-sm leading-relaxed">
                                         خدمة تنظيف شاملة للمنازل .
                                     </p>
-                                    <a href="tel:0500000000"
+                                    <a href="#"
                                         class="price-badge mt-3 cursor-pointer flex items-center justify-center gap-2">
                                         <i class="fas fa-phone"></i>
                                         <span>اتصل الآن</span>
@@ -1041,7 +1041,7 @@
                                     <p class="text-gray-600 text-sm leading-relaxed">
                                         تنظيف شامل للشقق المفروشة .
                                     </p>
-                                    <a href="tel:0500000000"
+                                    <a href="#"
                                         class="price-badge mt-3 cursor-pointer flex items-center justify-center gap-2">
                                         <i class="fas fa-phone"></i>
                                         <span>اتصل الآن</span>
@@ -1065,7 +1065,7 @@
                                     <p class="text-gray-600 text-sm leading-relaxed">
                                         تنظيف يومي أو أسبوعي.
                                     </p>
-                                    <a href="tel:0500000000"
+                                    <a href="#"
                                         class="price-badge mt-3 cursor-pointer flex items-center justify-center gap-2">
                                         <i class="fas fa-phone"></i>
                                         <span>اتصل الآن</span>
@@ -1088,7 +1088,7 @@
                                     <p class="text-gray-600 text-sm leading-relaxed">
                                         تنظيف شامل للسجاد .
                                     </p>
-                                    <a href="tel:0500000000"
+                                    <a href="#"
                                         class="price-badge mt-3 cursor-pointer flex items-center justify-center gap-2">
                                         <i class="fas fa-phone"></i>
                                         <span>اتصل الآن</span>
@@ -1109,7 +1109,7 @@
                                     <p class="text-gray-600 text-sm leading-relaxed">
                                         تنظيف الزجاج والنوافذ.
                                     </p>
-                                    <a href="tel:0500000000"
+                                    <a href="#"
                                         class="price-badge mt-3 cursor-pointer flex items-center justify-center gap-2">
                                         <i class="fas fa-phone"></i>
                                         <span>اتصل الآن</span>
@@ -1132,7 +1132,7 @@
                                     <p class="text-gray-600 text-sm leading-relaxed">
                                         تنظيف وتطهير .
                                     </p>
-                                    <a href="tel:0500000000"
+                                    <a href="#"
                                         class="price-badge mt-3 cursor-pointer flex items-center justify-center gap-2">
                                         <i class="fas fa-phone"></i>
                                         <span>اتصل الآن</span>
@@ -1599,7 +1599,7 @@
     </div>
     <!-- زر اتصال عائم -->
     <div class="fixed bottom-[100px] left-6 z-50">
-        <a href="tel:0500000000"
+        <a href="#"
             class="bg-blue-600 hover:bg-blue-700 rounded-full w-14 h-14 flex items-center justify-center text-white text-2xl floating-icon shadow-lg transition">
             <i class="fas fa-phone"></i>
         </a>
@@ -1939,7 +1939,7 @@
                         <!-- أزرار الاتصال الرئيسية -->
                         <div class="space-y-4 max-w-sm mx-auto lg:mx-0 lg:ml-auto">
                             <!-- زر واتساب -->
-                            <a href="https://wa.me/966123456789"
+                            <a href="#"
                                 class="btn-whatsapp text-white font-bold py-4 px-6 rounded-2xl text-lg w-full block transition duration-300">
                                 <div class="flex items-center justify-center gap-3">
                                     <i class="fab fa-whatsapp text-xl"></i>
@@ -1951,14 +1951,14 @@
                             </a>
 
                             <!-- زر الاتصال -->
-                            <a href="tel:920012345"
+                            <a href="#"
                                 class="btn-call text-white font-bold py-4 px-6 rounded-2xl text-lg w-full block transition duration-300">
                                 <div class="flex items-center justify-center gap-3">
                                     <i class="fas fa-phone-alt text-xl"></i>
                                     <span>اتصل بنا الآن</span>
                                 </div>
                                 <div class="text-white text-opacity-90 text-sm mt-1">
-                                    9200 12345
+                                   000000000
                                 </div>
                             </a>
                         </div>
@@ -2399,7 +2399,7 @@
                     <button
                         class="border-2 border-[#154461] text-[#154461] hover:bg-[#154461] hover:text-white font-bold py-3 px-8 rounded-2xl transition duration-300 inline-flex items-center gap-2">
                         <i class="fas fa-phone"></i>
-                        9200 12345
+                       0000000
                     </button>
                 </div>
             </div>
@@ -2561,7 +2561,7 @@
                             </div>
                             <div>
                                 <div class="text-[#154461] text-sm">اتصل بنا</div>
-                                <div class="font-bold">+966 12 345 6789</div>
+                                <div class="font-bold">+000000000</div>
                             </div>
                         </div>
 
