--- a/index.html
+++ b/index.html
@@ -859,10 +859,10 @@
             <div class="flex items-center gap-4 p-2 bg-white shadow-md rounded-2xl">
                 <!-- صورة الشعار دائرية -->
                 <img src="./asstes/img/profile.png" alt="شعار فريش كلين"
-                    class="w-16 h-16 rounded-full object-cover border-2 ">
+                    class="w-18 h-16  object-cover  ">
 
                 <!-- عنوان الشركة أنيق -->
-                <h1 class="text-2xl md:text-3xl font-extrabold text-[#154461] tracking-wide">فريش كلين</h1>
+                <!-- <h1 class="text-2xl md:text-3xl font-extrabold text-[#154461] tracking-wide">فريش كلين</h1> -->
             </div>
 
             <!-- Mobile Menu Button -->
@@ -2460,10 +2460,16 @@
                 <!-- معلومات الشركة -->
                 <div class="lg:col-span-2">
                     <div class="flex items-center gap-3 mb-6">
-                        <div class=" rounded-full p-2 w-16 h-16">
-                            <img src="./asstes/img/profile.png" alt="" class="rounded-full w-full h-full">
-                        </div>
-                        <h3 class="text-2xl font-bold"> فريش كلين </h3>
+                          <!-- Logo Section -->
+            <div class="flex items-center gap-4 p-2 bg-white shadow-md rounded-2xl">
+                <!-- صورة الشعار دائرية -->
+                <img src="./asstes/img/profile.png" alt="شعار فريش كلين"
+                    class="w-18 h-16  object-cover  ">
+
+                <!-- عنوان الشركة أنيق -->
+                <!-- <h1 class="text-2xl md:text-3xl font-extrabold text-[#154461] tracking-wide">فريش كلين</h1> -->
+            </div>
+                        
                     </div>
                     <p class="text-green-100 mb-6 text-lg leading-relaxed">
                         نقدم خدمات تنظيف محترفة وشاملة للمنازل والمكاتب والمساحات التجارية.
