add img and change

--- a/index.html
+++ b/index.html
@@ -1253,7 +1253,7 @@
                     class="inline-block bg-orange-100 text-orange-600 font-bold py-1 px-4 rounded-full text-sm mb-4">من
                     نحن</span>
                 <h2 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">فريش <span
-                        class="text-[#33abde]">كلين</span> افضل <span class="text-[#154461]">شركة</span> <span
+                        class="text-[#33abde]">كلين</span> افضل <span class="text-[#154461]">شركة نظافة</span> <span
                         class="text-[#154461]">في الرياض </span></h2>
                 <p class="text-xl text-gray-700 max-w-3xl mx-auto">فريق متخصص في ( تنظيف المنازل - تنظيف الفلل - تنظيف الشقق - تنظيف المكاتب والشركات - تنظيف المجالس  - تنظيف الخزانات )
 تغطية جميع مناطق واحياء الرياض
@@ -1501,7 +1501,7 @@
                <!-- خدمة تنظيف الفلل في الرياض -->
                 <div class="service-card bg-white rounded-2xl shadow-md overflow-hidden">
                     <div class="relative overflow-hidden">
-                        <img src="./asstes/img/hotel-cleaning.png" alt="تنظيف الفلل في الرياض"
+                        <img src="./asstes/img/villa-cleaning-in-riyadh.png" alt="تنظيف الفلل في الرياض"
                             class="service-image w-full h-auto">
                     </div>
 
@@ -1535,7 +1535,7 @@
                     <!-- خدمة تنظيف الشقق في الرياض -->
                     <div class="service-card bg-white rounded-2xl shadow-md overflow-hidden">
                         <div class="relative overflow-hidden">
-                            <img src="./asstes/img/cleaning-solutions.png" alt="تنظيف الشقق في الرياض"
+                            <img src="./asstes/img/apartment-cleaning-service.png" alt="تنظيف الشقق في الرياض"
                                 class="service-image w-full h-auto">
                             <div class="service-overlay">
                                 <h3 class="text-white text-xl font-bold">تنظيف الشقق في الرياض</h3>
@@ -1572,7 +1572,7 @@
                 <div class="service-card bg-white rounded-2xl shadow-md overflow-hidden relative">
                     <div class="badge">مميز</div>
                     <div class="relative overflow-hidden">
-                        <img src="./asstes/img/cleaning-cupboards.png" alt="تنظيف المجالس والكنب والسجاد في الرياض"
+                        <img src="./asstes/img/cleaning-sofas-couches-and-carpets.png" alt="تنظيف المجالس والكنب والسجاد في الرياض"
                             class="service-image w-full h-auto">
                     </div>
 
@@ -1654,7 +1654,7 @@
 
                 <h2 class="text-4xl md:text-5xl font-bold text-gray-900 mb-6">
                     لماذا تختار
-                    <span class="text-[#154461]">فريش كلين</span>
+                    <span class="text-[#154461]">فريش كلين للنظافة</span>
                     
                     في الرياض ؟
                 </h2>
@@ -2378,7 +2378,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
 
                     <!-- إحصائيات سريعة -->
